removed z-index for the main element because it prevented links behaving as expected

--- a/assets/less/layout.less
+++ b/assets/less/layout.less
@@ -50,7 +50,6 @@ View
 main {
 	.fixed();
 	.size(100%,100%);
-	z-index: 2;
 
 	.page {
 		.fixed();
